  - Fix internal and therefore undocumented type parameter swallows
    Output::Search::Elasticsearches type parameter

0.114 2013-09-17T10:30:00+02:00
  - Fix test failures under Perl 5.18
  - Improve documentation

0.113 2013-08-02T09:25:00+02:00
  - Add Message::Passing::Filter::Mangle for use with Message::Passing::DSL
    when you don't want to write a named filter.

0.112 2013-04-25T23:45:39+0100
  - Change to LGPL_2_1.

0.111 2013-03-03T15:54:12+0000
  - Fix STDIN input to exit on EOF.

0.110 2012-10-08T16:51:49+0100
  - Fix v-string to work with perl 5.8. RT#80034
  - Fix issues stopping multiple FileTail inputs being used in the
    same process.

0.109 2012-09-27T16:11:50+0100
  - Really fix test fail :(

0.108 2012-09-27T14:59:43+0100
  - Fix test fail on some machines.

0.107 2012-09-27T10:03:30+0100
  - Change Input::FileTail to use Sys::Hostname::Long

  - Fix bug causing crash with no helpful error message if PID file
    location is not writeable.

0.106 2012-09-12T23:59:13+0100
  - Remove debug warning accidentally left in the UDP input.

0.105 2012-09-12T23:55:36+0100
  - Depend on latest MooX::Options to stop install fails.

0.104 2012-09-06T18:36:27+0200
  - Fix to work with MooX::Options 3.7

0.103 2012-09-05T09:07:00+0100
  - Message::Passing::Input::FileTail now defaults to outputting a hash
    of data which contains additional metadata to the message line,
    such as the hostname, timestamp, filename. A 'raw => 1' option has
    been added which can be used to restore the original behaviour.

  - Add an experimental (and undocumented)
    Message::Passing::Filter::ToLogstash

  - Fix issue in JSON decoder when processing exceptions.

0.102 2012-08-26T21:12:52+0100
  - Add error chain support to the JSON encoder and decoder so that an
    error is logged if JSON encoding or decoding fails.

  - Make default error chain do JSON encoding on errors so that they're
    readable.

  - Make CLI error chain have options for the error encoder.
