@@ -1,5 +1,6 @@
   - Fix internal and therefore undocumented type parameter swallows
     Output::Search::Elasticsearches type parameter
+  - Use JSON::MaybeXS instead of JSON in Filter::De/Encoder::JSON
 
 0.114 2013-09-17T10:30:00+02:00
   - Fix test failures under Perl 5.18
